# RspamD-Hot-or-Not

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
app/: config.py  db.py  main.py
app/models/: __init__.py  audit_log.py  classification.py  message.py  settings.py  user.py
app/providers/: base.py  factory.py  local_eml.py
app/routes/: admin.py  auth.py  dashboard.py  messages.py  settings.py
app/schemas/: __init__.py  classification.py  message.py  settings.py  user.py
app/services/: audit_log_service.py  auth_service.py  classification_service.py  rspamd_service.py  settings_service.py
app/static/css/: style.css
app/static/js/: app.js  i18n.js  review.js
app/templates/: dashboard.html  first_login.html  history.html  index.html  login.html  review.html  settings.html
app/utils/: mbox_bridge.py  message_sync.py  rspamd_client.py  security.py
data/emails/: test_ham_1.eml  test_newsletter_1.eml  test_phishing_1.eml  test_spam_1.eml
scripts/: sync_once.py
