[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rspamd-hot-or-not"
version = "1.0.0"
description = "Web-based mail classification tool for Rspamd learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Mail",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "requests==2.31.0",
    "aiofiles==23.2.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/rspamd-hot-or-not"
Repository = "https://github.com/yourusername/rspamd-hot-or-not.git"
Documentation = "https://github.com/yourusername/rspamd-hot-or-not/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true
